<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WisconsinAndroids</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="accel_y">Y:</string>
    <string name="accel_z">Z:</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="gps_status">GPS Status:</string>
    <string name="gps_string">GPS String:</string>
    <string name="accel_x">X:</string>
    <string name="latitude">Lat:</string>
    <string name="longtitude">Long:</string>
    <string name="longitude">Long:</string>
    <string name="label1">IP Address:</string>
    <string name="label2">Acceleration:</string>
    <string name="label3">GPS:</string>
    <string name="label4">Orientation:</string>
    <string name="azimuth">Azimuth:</string>
    <string name="pitch">Pitch:</string>
    <string name="roll">Roll:</string>
    <string name="label5">Magnetic Field:</string>
    <string name="magX">X:</string>
    <string name="magY">Y:</string>
    <string name="magZ">Z:</string>

</resources>
