<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.wisconsinandroids.CollectData$PlaceholderFragment" >

    <EditText
        android:id="@+id/IP_Address_Target"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/AccelZ"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp"
        android:ems="10"
        android:inputType="textNoSuggestions" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/AccelX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/AccelY"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="42dp"
        android:text="@string/accel_x"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/AccelZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/GPS_Status"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/AccelY"
        android:text="@string/accel_z"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/AccelY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/AccelZ"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/AccelX"
        android:text="@string/accel_y"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/GPS_Status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/GPS_String"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/AccelZ"
        android:text="@string/gps_status"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/GPS_String"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/GPS_Status"
        android:text="@string/gps_string"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/Latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/GPS_String"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/GPS_String"
        android:text="@string/latitude"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/Longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Latitude"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/Latitude"
        android:text="@string/longitude"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/StartStopButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/start_button" />

    <TextView
        android:id="@+id/Label1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/IP_Address_Target"
        android:layout_alignBottom="@+id/IP_Address_Target"
        android:layout_toLeftOf="@+id/IP_Address_Target"
        android:text="@string/label1"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>